<resources>
    <string name="app_name">Tasmuq Mobile</string>
    <string name="btn_search">Pencarian</string>
    <string name="btn_report">Melaporkan</string>
    <string name="btn_verify">Pengesahan</string>
    <string name="enable_dbg">Enable Debug Mode</string>
    <string name="enable_dbg_summary">Enable Developer Settings</string>
    <string name="email_pref">Email Address</string>
    <string name="email_pref_summary">Reports will be sent to this address</string>
    <string name="failed_intent">Error starting activity</string>
    <string name="settings">Settings</string>
    <string name="server_pref_default">https://api.tasmuq.com/</string>
    <string name="backend_pref">Server Address</string>
    <string name="default_email_pref">mail@domain.com</string>
    <string name="backend_pref_summary">Tasmuq backend server address</string>
    <string name="title_activity_reporting">ReportingActivity</string>
    <string name="reportingTitle">Laporan</string>
    <string name="btn_Send">Hantar</string>
    <string name="mainTitle">Mobile Mushaf</string>
    <string name="title_activity_user_search">Pencarian</string>
    <string name="img_desc">Mushaf Image</string>
    <string name="no_data_error">No Data Available</string>
    <string name="menu_refresh">Refresh</string>
    <string name="title_activity_detail">Mushaf Details</string>
    <string name="mushaf_detail">Maklumat Mushaf</string>
    <string name="mushaf_verse">Verse Details</string>
    <string name="text_logo">Universiti Teknikal Malaysia Melaka | 2018</string>
    <string name="logo_description">Mushaf Logo</string>
    <string name="nama_pengadu">Nama</string>
    <string name="ic_pengadu">Nombor IC</string>
    <string name="report">Laporan</string>
    <string name="attach_location">Lokasi</string>
    <string name="lblPenerbit">Penerbit:</string>
    <string name="lblNegara">Negara:</string>
    <string name="lblVersi">Versi:</string>
    <string name="lblTahunPenerbit">Tahun Penerbitan:</string>
    <string name="lblPenyalin">Penyalin:</string>
    <string name="lblTahunDisah">Tahun Disahkan:</string>
    <string name="lblMukaSurat">Muka Surat:</string>
    <string name="lblNamaFail">Nama Fail:</string>
    <string name="phPenerbit">Telaga Biru</string>
    <string name="phNegara">Madinah</string>
    <string name="phVersi">1</string>
    <string name="phTahunPenerbit">1998</string>
    <string name="phPenyalin" />
    <string name="phTahunSah">1999</string>
    <string name="phMukasurat">2</string>
    <string name="phNamaFail">Majeed_2015_002.jpg</string>
    <string name="loadPlaceholder">...</string>
</resources>
